ci: use SlimLLVM 14 (GitLab repo by DarknessKiller)
Co-Authored-By: Calvin Chen <mrdarknesskiller@protonmail.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Fetch SlimLLVM
       run: |
         rm -rf prebuilts-master/clang/host/linux-x86/clang-r416183b
-        git clone https://gitlab.com/xummarik/SlimLLVM.git -b main --depth=1 prebuilts-master/clang/host/linux-x86/clang-r416183b
+        git clone https://gitlab.com/MRDarknessKiller/slimllvm.git -b 14 --depth=1 prebuilts-master/clang/host/linux-x86/clang-r416183b
 
     - name: Build Kernel
       run: |
